plugins {
    id 'java-library'
    id 'org.springframework.boot' version '3.0.2'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.olrtc'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '19'
bootJar.enabled = false


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

// version
ext {
    // common-core
    commonslang3Version = "3.12.0"
    // ws
    nettyVersion = '4.1.86.Final'
    //security
    saTokenVerion = "1.34.0"
}


subprojects {
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'


    // 项目的默认名称和版本
//    group = "com.miaopasi.learn.springcloud"
//    version = '0.0.1-SNAPSHOT'

    // 指定JDK版本
//    sourceCompatibility = '11'
//    jar.enabled = true


    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-web'
        // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
        implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.8'



        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'

    }

    tasks.named('test') {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile).tap {
        configureEach {
            options.compilerArgs += "--enable-preview"
        }
    }


    // user define maven repository
    repositories {
        maven {
            allowInsecureProtocol = true
            credentials {
                username "$mavenUser"
                password "$mavenPass"
            }
            url "$mavenUrl"
        }
    }
}
